--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:visibility="visible">
 
 
         <Button
@@ -105,11 +105,13 @@
 
         <EditText
             android:id="@+id/settings_settings_editText_username"
+            android:labelFor=" "
             android:layout_width="140dp"
-            android:layout_height="26dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignTop="@+id/settings_settings_textView_username"
             android:layout_marginEnd="42dp"
+            android:layout_marginTop="-19dp"
             android:ems="10"
             android:inputType="textPersonName" />
 
@@ -126,7 +128,7 @@
             android:layout_width="64dp"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/settings_settings_textView_reminder"
-            android:layout_toEndOf="@+id/settings_settings_textView_username"/>
+            android:layout_toEndOf="@+id/settings_settings_textView_username" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -136,6 +138,11 @@
         android:visibility="gone">
 
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Support" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -144,7 +151,11 @@
         android:layout_height="match_parent"
         android:visibility="gone">
 
-
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Impressum" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -153,7 +164,11 @@
         android:layout_height="match_parent"
         android:visibility="gone">
 
-
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Feedback" />
     </RelativeLayout>
 
 
