--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -112,6 +112,7 @@
             android:layout_marginEnd="42dp"
             android:layout_marginTop="-19dp"
             android:ems="10"
+            android:hint="@string/username_hint"
             android:inputType="textPersonName" />
 
         <Switch
