--- a/app/src/main/res/layout/activity_reader.xml
+++ b/app/src/main/res/layout/activity_reader.xml
@@ -13,7 +13,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="QRCode Scanner"
+        android:text="@string/title_activity_scan"
         android:textSize="25sp"
         android:layout_centerHorizontal="true"
         />
@@ -24,7 +24,16 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="SCAN"
+        android:text="@string/button_name_scan"
         android:visibility="visible" />
+
+    <Button
+        android:id="@+id/showData_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="125dp"
+        android:text="@string/button_show_data" />
 
 </RelativeLayout>
