Added fields that shows current month and selected day. Also updated package names.

--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -10,6 +10,8 @@
         android:id="@+id/calendarCvCalendar"
         android:layout_width="fill_parent"
         android:layout_height="250dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         app:compactCalendarBackgroundColor="#ffe95451"
@@ -18,17 +20,54 @@
         app:compactCalendarMultiEventIndicatorColor="#fff"
         app:compactCalendarTargetHeight="250dp"
         app:compactCalendarTextColor="#fff"
-        app:compactCalendarTextSize="12sp" />
+        app:compactCalendarTextSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.059"
+        tools:layout_editor_absoluteX="0dp" />
 
     <ListView
         android:id="@+id/calendarLvList"
         android:layout_width="368dp"
-        android:layout_height="245dp"
+        android:layout_height="228dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
         tools:layout_editor_absoluteX="8dp" />
+
+    <TextView
+        android:id="@+id/calendarTvDay"
+        android:layout_width="0dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendarCvCalendar"
+        app:layout_constraintVertical_bias="0.036" />
+
+    <TextView
+        android:id="@+id/calendarTvMonth"
+        android:layout_width="0dp"
+        android:layout_height="25dp"
+        android:autoText="false"
+        android:background="#ffe95451"
+        android:backgroundTint="#ffe95451"
+        android:backgroundTintMode="src_atop"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/calendarCvCalendar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        tools:background="#ffe95451" />
 
 </android.support.constraint.ConstraintLayout>
