--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -21,4 +21,14 @@
         android:id="@+id/btnTEST2"
         android:text="TESTBTN 2"/>
 
+    <Button
+        android:id="@+id/gotoscanner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="96dp"
+        android:layout_marginEnd="28dp"
+        android:text="Go To Scanner Temp" />
+
 </RelativeLayout>
