--- a/app/src/main/res/layout/activity_reader.xml
+++ b/app/src/main/res/layout/activity_reader.xml
@@ -1,39 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:paddingTop="16dp"
-    tools:context=".QRScannerActivity">
+    android:paddingTop="16dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/title_activity_scan"
-        android:textSize="25sp"
-        android:layout_centerHorizontal="true"
-        />
-
-    <Button
-        android:id="@+id/scanner_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/button_name_scan"
-        android:visibility="visible" />
-
-    <Button
-        android:id="@+id/showData_btn"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/scanner_temp_buttonframe"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="125dp"
-        android:text="@string/button_show_data" />
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/showData_btn"
+            android:layout_width="155dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:text="@string/button_show_data"
+            android:visibility="visible" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
