US008(QRGenerator): - Create new QRGenClass an make it runnable

--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -22,12 +22,21 @@
 
         <Button
             android:id="@+id/gotoscanner"
-            android:layout_width="wrap_content"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_marginBottom="66dp"
             android:layout_marginEnd="32dp"
             android:text="Go To Scanner Temp" />
+
+        <Button
+            android:id="@+id/gotogenerator"
+            android:layout_width="113dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="43dp"
+            android:text="Go to QR Generator" />
     </RelativeLayout>
 </RelativeLayout>
