--- a/app/src/main/res/layout/activity_tab.xml
+++ b/app/src/main/res/layout/activity_tab.xml
@@ -31,7 +31,8 @@
                 android:id="@+id/calendarTab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/calendarTabText" />
+                android:text="@string/calendarTabText"
+                android:visibility="visible" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/settingTab"
@@ -46,7 +47,9 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+
+    </android.support.v4.view.ViewPager>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/newEventFloatButton"
