US038_ZurückAufVorangegangeneActivity try to work with fragments instead of Layouts (VISIBLE/GONE)

--- a/app/src/main/res/layout/activity_tab.xml
+++ b/app/src/main/res/layout/activity_tab.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".TabActivity">
+    tools:context=".TabActivity"
+    android:background="?android:windowBackground">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -55,5 +56,10 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_dialog_email" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_container" />
 
 </android.support.design.widget.CoordinatorLayout>
